--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
