--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
     "@prisma/client": "^5.15.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "lucide-react": "^0.394.0",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
