--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "@prisma/client": "^5.15.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.394.0",
     "mongodb": "^6.7.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "prisma": "^5.15.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.11.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
